fixed about page on mobile

--- a/app/css/about.css
+++ b/app/css/about.css
@@ -13,6 +13,12 @@ body {
     background-color: white;
 }
 
-.content-box h3 {
+.content-box h4 {
     text-decoration: underline;
+}
+
+@media(min-width:1200px) {
+    .content-box h4 {
+        font-size: 2rem;
+    }
 }
